cgroup,freezer: fix incomplete freezing when attaching tasks (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7706,6 +7706,7 @@
 	patches.kernel.org/6.12.35-082-can-tcan4x5x-fix-power-regulator-retrieval-du.patch
 	patches.kernel.org/6.12.35-083-ceph-avoid-kernel-BUG-for-encrypted-inode-wit.patch
 	patches.kernel.org/6.12.35-084-ceph-set-superblock-s_magic-for-IMA-fsmagic-m.patch
+	patches.kernel.org/6.12.35-085-cgroup-freezer-fix-incomplete-freezing-when-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
