--- a/series.conf
+++ b/series.conf
@@ -7628,6 +7628,7 @@
 	patches.kernel.org/6.12.35-004-crypto-qat-add-shutdown-handler-to-qat_c3xxx.patch
 	patches.kernel.org/6.12.35-005-crypto-qat-add-shutdown-handler-to-qat_420xx.patch
 	patches.kernel.org/6.12.35-006-crypto-qat-add-shutdown-handler-to-qat_4xxx.patch
+	patches.kernel.org/6.12.35-007-crypto-qat-add-shutdown-handler-to-qat_c62x.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
