wifi: mac80211: validate SCAN_FLAG_AP in scan request during MLO (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7824,6 +7824,7 @@
 	patches.kernel.org/6.12.35-200-wifi-mt76-mt76x2-Add-support-for-LiteOn-WN451.patch
 	patches.kernel.org/6.12.35-201-wifi-mt76-mt7921-add-160-MHz-AP-for-mt7922-de.patch
 	patches.kernel.org/6.12.35-202-wifi-mt76-mt7925-introduce-thermal-protection.patch
+	patches.kernel.org/6.12.35-203-wifi-mac80211-validate-SCAN_FLAG_AP-in-scan-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
