KVM: SVM: Clear current_vmcb during vCPU free for all *possible* CPUs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7744,6 +7744,7 @@
 	patches.kernel.org/6.12.35-120-firmware-arm_scmi-Ensure-that-the-message-id-.patch
 	patches.kernel.org/6.12.35-121-mtd-rawnand-sunxi-Add-randomizer-configuratio.patch
 	patches.kernel.org/6.12.35-122-mtd-nand-sunxi-Add-randomizer-configuration-b.patch
+	patches.kernel.org/6.12.35-123-KVM-SVM-Clear-current_vmcb-during-vCPU-free-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
