wifi: ath11k: fix ring-buffer corruption (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7648,6 +7648,7 @@
 	patches.kernel.org/6.12.35-024-wifi-mt76-mt7925-fix-host-interrupt-register-.patch
 	patches.kernel.org/6.12.35-025-wifi-ath11k-fix-rx-completion-meta-data-corru.patch
 	patches.kernel.org/6.12.35-026-wifi-rtw88-usb-Upload-the-firmware-in-bigger-.patch
+	patches.kernel.org/6.12.35-027-wifi-ath11k-fix-ring-buffer-corruption.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
