f2fs: fix to do sanity check on ino and xnid (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7720,6 +7720,7 @@
 	patches.kernel.org/6.12.35-096-ext4-only-dirty-folios-when-data-journaling-r.patch
 	patches.kernel.org/6.12.35-097-Input-ims-pcu-check-record-size-in-ims_pcu_fl.patch
 	patches.kernel.org/6.12.35-098-Input-gpio-keys-fix-possible-concurrent-acces.patch
+	patches.kernel.org/6.12.35-099-f2fs-fix-to-do-sanity-check-on-ino-and-xnid.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
