eth: fbnic: avoid double free when failing to DMA-map FW msg (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8004,6 +8004,7 @@
 	patches.kernel.org/6.12.35-380-tcp-fix-tcp_packet_delayed-for-tcp_is_non_sac.patch
 	patches.kernel.org/6.12.35-381-tipc-fix-null-ptr-deref-when-acquiring-remote.patch
 	patches.kernel.org/6.12.35-382-tcp-fix-passive-TFO-socket-having-invalid-NAP.patch
+	patches.kernel.org/6.12.35-383-eth-fbnic-avoid-double-free-when-failing-to-D.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
