--- a/series.conf
+++ b/series.conf
@@ -8003,6 +8003,7 @@
 	patches.kernel.org/6.12.35-379-atm-atmtcp-Free-invalid-length-skb-in-atmtcp_.patch
 	patches.kernel.org/6.12.35-380-tcp-fix-tcp_packet_delayed-for-tcp_is_non_sac.patch
 	patches.kernel.org/6.12.35-381-tipc-fix-null-ptr-deref-when-acquiring-remote.patch
+	patches.kernel.org/6.12.35-382-tcp-fix-passive-TFO-socket-having-invalid-NAP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
