KVM: VMX: Flush shadow VMCS on emergency reboot (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7745,6 +7745,7 @@
 	patches.kernel.org/6.12.35-121-mtd-rawnand-sunxi-Add-randomizer-configuratio.patch
 	patches.kernel.org/6.12.35-122-mtd-nand-sunxi-Add-randomizer-configuration-b.patch
 	patches.kernel.org/6.12.35-123-KVM-SVM-Clear-current_vmcb-during-vCPU-free-f.patch
+	patches.kernel.org/6.12.35-124-KVM-VMX-Flush-shadow-VMCS-on-emergency-reboot.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
