ublk: santizize the arguments from userspace when adding a device (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8006,6 +8006,7 @@
 	patches.kernel.org/6.12.35-382-tcp-fix-passive-TFO-socket-having-invalid-NAP.patch
 	patches.kernel.org/6.12.35-383-eth-fbnic-avoid-double-free-when-failing-to-D.patch
 	patches.kernel.org/6.12.35-384-net-lan743x-fix-potential-out-of-bounds-write.patch
+	patches.kernel.org/6.12.35-385-ublk-santizize-the-arguments-from-userspace-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
