--- a/series.conf
+++ b/series.conf
@@ -7646,6 +7646,7 @@
 	patches.kernel.org/6.12.35-022-net-mlx5-Add-error-handling-in-mlx5_query_nic.patch
 	patches.kernel.org/6.12.35-023-wifi-p54-prevent-buffer-overflow-in-p54_rx_ee.patch
 	patches.kernel.org/6.12.35-024-wifi-mt76-mt7925-fix-host-interrupt-register-.patch
+	patches.kernel.org/6.12.35-025-wifi-ath11k-fix-rx-completion-meta-data-corru.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
