--- a/series.conf
+++ b/series.conf
@@ -7707,6 +7707,7 @@
 	patches.kernel.org/6.12.35-083-ceph-avoid-kernel-BUG-for-encrypted-inode-wit.patch
 	patches.kernel.org/6.12.35-084-ceph-set-superblock-s_magic-for-IMA-fsmagic-m.patch
 	patches.kernel.org/6.12.35-085-cgroup-freezer-fix-incomplete-freezing-when-a.patch
+	patches.kernel.org/6.12.35-086-bus-firewall-Fix-missing-static-inline-annota.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
