--- a/series.conf
+++ b/series.conf
@@ -7913,6 +7913,7 @@
 	patches.kernel.org/6.12.35-289-platform-x86-dell_rbu-Fix-list-usage.patch
 	patches.kernel.org/6.12.35-290-platform-x86-dell_rbu-Stop-overwriting-data-b.patch
 	patches.kernel.org/6.12.35-291-powerpc-vdso-Fix-build-of-VDSO32-with-pcrel.patch
+	patches.kernel.org/6.12.35-292-powerpc-eeh-Fix-missing-PE-bridge-reconfigura.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
