fs/nfs/read: fix double-unlock bug in nfs_return_empty_folio() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7656,6 +7656,7 @@
 	patches.kernel.org/6.12.35-032-nfsd-Initialize-ssc-before-laundromat_work-to.patch
 	patches.kernel.org/6.12.35-033-SUNRPC-Prevent-hang-on-NFS-mount-with-xprtsec.patch
 	patches.kernel.org/6.12.35-034-NFSv4-Don-t-check-for-OPEN-feature-support-in.patch
+	patches.kernel.org/6.12.35-035-fs-nfs-read-fix-double-unlock-bug-in-nfs_retu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
