--- a/series.conf
+++ b/series.conf
@@ -7624,6 +7624,7 @@
 	patches.kernel.org/6.12.34-506-Linux-6.12.34.patch
 	patches.kernel.org/6.12.35-001-configfs-Do-not-override-creating-attribute-f.patch
 	patches.kernel.org/6.12.35-002-crypto-marvell-cesa-Do-not-chain-submitted-re.patch
+	patches.kernel.org/6.12.35-003-gfs2-move-msleep-to-sleepable-context.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
