--- a/series.conf
+++ b/series.conf
@@ -7623,6 +7623,7 @@
 	patches.kernel.org/6.12.34-505-thermal-drivers-mediatek-lvts-Remove-unused-l.patch
 	patches.kernel.org/6.12.34-506-Linux-6.12.34.patch
 	patches.kernel.org/6.12.35-001-configfs-Do-not-override-creating-attribute-f.patch
+	patches.kernel.org/6.12.35-002-crypto-marvell-cesa-Do-not-chain-submitted-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
