wifi: ath11k: Fix QMI memory reuse logic (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7834,6 +7834,7 @@
 	patches.kernel.org/6.12.35-210-net-dlink-add-synchronization-for-stats-updat.patch
 	patches.kernel.org/6.12.35-211-wifi-ath12k-fix-macro-definition-HAL_RX_MSDU_.patch
 	patches.kernel.org/6.12.35-212-wifi-ath12k-fix-a-possible-dead-lock-caused-b.patch
+	patches.kernel.org/6.12.35-213-wifi-ath11k-Fix-QMI-memory-reuse-logic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
