--- a/series.conf
+++ b/series.conf
@@ -8036,6 +8036,7 @@
 	patches.kernel.org/6.12.35-412-cifs-Remove-duplicate-fattr-cf_dtype-assignme.patch
 	patches.kernel.org/6.12.35-413-bpftool-Fix-cgroup-command-to-only-show-cgrou.patch
 	patches.kernel.org/6.12.35-414-Linux-6.12.35.patch
+	patches.kernel.org/bridge-mcast-Fix-use-after-free-during-router-port-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
