wifi: ath12k: fix macro definition HAL_RX_MSDU_PKT_LENGTH_GET (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32476,6 +32476,7 @@
 	patches.suse/wifi-ath11k-fix-ring-buffer-corruption.patch
 	patches.suse/wifi-ath11k-fix-rx-completion-meta-data-corruption.patch
 	patches.suse/wifi-ath12k-fix-a-possible-dead-lock-caused-by-ab-ba.patch
+	patches.suse/wifi-ath12k-fix-macro-definition-HAL_RX_MSDU_PKT_LEN.patch
 	patches.suse/wifi-ath12k-fix-ring-buffer-corruption.patch
 	patches.suse/wifi-ath9k_htc-Abort-software-beacon-handling-if-dis.patch
 	patches.suse/Revert-wifi-mt76-mt7996-fill-txd-by-host-driver.patch
