--- a/series.conf
+++ b/series.conf
@@ -32437,6 +32437,7 @@
 	patches.suse/firmware-SDEI-Allow-sdei-initialization-without-ACPI.patch
 	patches.suse/firmware-psci-Fix-refcount-leak-in-psci_dt_init.patch
 	patches.suse/usbnet-asix-AX88772-leave-the-carrier-control-to-phy.patch
+	patches.suse/wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-Qu-c0-j.patch
 	patches.suse/wifi-ath11k-determine-PM-policy-based-on-machine-mod.patch
 	patches.suse/wifi-ath11k-introduce-ath11k_core_continue_suspend_r.patch
 	patches.suse/wifi-ath11k-refactor-ath11k_core_suspend-_resume.patch
