--- a/series.conf
+++ b/series.conf
@@ -32499,6 +32499,7 @@
 	patches.suse/net-phy-mscc-Stop-clearing-the-the-UDPv4-checksum-fo.patch
 	patches.suse/selftests-bpf-Fix-bpf_nf-selftest-failure.patch
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
+	patches.suse/software-node-Correct-a-OOB-check-in-software_node_g.patch
 	patches.suse/tracing-Fix-compilation-warning-on-arm32.patch
 	patches.suse/scsi-lpfc-Use-memcpy-for-BIOS-version.patch
 	patches.suse/scsi-hisi_sas-Call-I_T_nexus-after-soft-reset-for-SATA-dis.patch
