--- a/series.conf
+++ b/series.conf
@@ -32718,6 +32718,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
 	patches.suse/drm-i915-fix-build-error-some-more.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
+	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 
 	########################################################
 	# end of sorted patches
