wifi: ath12k: Pass correct values of center freq1 and center freq2 for 160 MHz (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32439,6 +32439,7 @@
 	patches.suse/usbnet-asix-AX88772-leave-the-carrier-control-to-phy.patch
 	patches.suse/wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-Qu-c0-j.patch
 	patches.suse/wifi-mac80211-VLAN-traffic-in-multicast-path.patch
+	patches.suse/wifi-ath12k-Pass-correct-values-of-center-freq1-and-.patch
 	patches.suse/wifi-ath11k-determine-PM-policy-based-on-machine-mod.patch
 	patches.suse/wifi-ath11k-introduce-ath11k_core_continue_suspend_r.patch
 	patches.suse/wifi-ath11k-refactor-ath11k_core_suspend-_resume.patch
