--- a/series.conf
+++ b/series.conf
@@ -32459,6 +32459,7 @@
 	patches.suse/wifi-ath12k-Fix-the-QoS-control-field-offset-to-buil.patch
 	patches.suse/wifi-ath12k-fix-node-corruption-in-ar-arvifs-list.patch
 	patches.suse/wifi-mac80211_hwsim-Prevent-tsf-from-setting-if-beac.patch
+	patches.suse/wifi-iwlwifi-pcie-make-sure-to-lock-rxq-read.patch
 	patches.suse/Bluetooth-MGMT-iterate-over-mesh-commands-in-mgmt_me.patch
 	patches.suse/wifi-iwlfiwi-mvm-Fix-the-rate-reporting.patch
 	patches.suse/wifi-rtw88-sdio-map-mgmt-frames-to-queue-TX_DESC_QSE.patch
