ACPICA: utilities: Fix overflow check in vsnprintf() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32374,6 +32374,7 @@
 	patches.suse/ACPICA-fix-acpi-operand-cache-leak-in-dswstate.c.patch
 	patches.suse/ACPICA-fix-acpi-parse-and-parseext-cache-leaks.patch
 	patches.suse/ACPICA-exserial-don-t-forget-to-handle-FFixedHW-opre.patch
+	patches.suse/ACPICA-utilities-Fix-overflow-check-in-vsnprintf.patch
 	patches.suse/ACPICA-Utilities-Fix-spelling-mistake-Incremement-In.patch
 	patches.suse/PM-wakeup-Delete-space-in-the-end-of-string-shown-by.patch
 	patches.suse/PM-sleep-Print-PM-debug-messages-during-hibernation.patch
