--- a/series.conf
+++ b/series.conf
@@ -32701,6 +32701,7 @@
 	patches.suse/drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
 	patches.suse/drm-nouveau-bl-increase-buffer-size-to-avoid-truncat.patch
 	patches.suse/drm-etnaviv-Protect-the-scheduler-s-pending-list-wit.patch
+	patches.suse/ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-list.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
 	patches.suse/scsi-elx-efct-Fix-memory-leak-in-efct_hw_parse_filter.patch
