--- a/series.conf
+++ b/series.conf
@@ -32467,6 +32467,7 @@
 	patches.suse/wifi-rtw88-sdio-call-rtw_sdio_indicate_tx_status-unc.patch
 	patches.suse/wifi-rtw88-do-not-ignore-hardware-read-error-during-.patch
 	patches.suse/wifi-rtlwifi-disable-ASPM-for-RTL8723BE-with-subsyst.patch
+	patches.suse/wifi-rtw89-leave-idle-mode-when-setting-WEP-encrypti.patch
 	patches.suse/wifi-rtw89-pci-enlarge-retry-times-of-RX-tag-to-1000.patch
 	patches.suse/wifi-rtw88-usb-Reduce-control-message-timeout-to-500.patch
 	patches.suse/wifi-rtw88-fix-the-para-buffer-size-to-avoid-reading.patch
