i2c: robotfuzz-osif: disable zero-length read messages (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32717,6 +32717,7 @@
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
 	patches.suse/drm-i915-fix-build-error-some-more.patch
+	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 
 	########################################################
 	# end of sorted patches
