drivers/rapidio/rio_cm.c: prevent possible heap overwrite (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32677,6 +32677,7 @@
 	patches.suse/ACPI-CPPC-Fix-NULL-pointer-dereference-when-nosmp-is.patch
 	patches.suse/scsi-iscsi-Fix-incorrect-error-path-labels-for-flashnode-o.patch
 	patches.suse/msft-hv-3282-scsi-storvsc-Increase-the-timeouts-to-storvsc_timeou.patch
+	patches.suse/drivers-rapidio-rio_cm.c-prevent-possible-heap-overw.patch
 	patches.suse/nvme-always-punt-polled-uring_cmd-end_io-work-to-tas.patch
 	patches.suse/powerpc-eeh-Fix-missing-PE-bridge-reconfiguration-du.patch
 	patches.suse/platform-x86-ideapad-laptop-use-usleep_range-for-EC-.patch
