--- a/series.conf
+++ b/series.conf
@@ -32526,6 +32526,7 @@
 	patches.suse/pinctrl-at91-Fix-possible-out-of-boundary-access.patch
 	patches.suse/pinctrl-armada-37xx-use-correct-OUTPUT_VAL-register-.patch
 	patches.suse/pinctrl-armada-37xx-set-GPIO-output-value-before-set.patch
+	patches.suse/pinctrl-armada-37xx-propagate-error-from-armada_37xx.patch
 	patches.suse/i2c-tegra-check-msg-length-in-SMBUS-block-read.patch
 	patches.suse/IB-cm-use-rwlock-for-MAD-agent-lock.patch
 	patches.suse/RDMA-rxe-Fix-trying-to-register-non-static-key-in-rx.patch
