ACPI: bus: Bail out if acpi_kobj registration fails (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32370,6 +32370,7 @@
 	patches.suse/power-supply-bq27xxx-Retrieve-again-when-busy.patch
 	patches.suse/mmc-Add-quirk-to-disable-DDR50-tuning.patch
 	patches.suse/ACPI-OSI-Stop-advertising-support-for-3.0-_SCP-Exten.patch
+	patches.suse/ACPI-bus-Bail-out-if-acpi_kobj-registration-fails.patch
 	patches.suse/ACPICA-exserial-don-t-forget-to-handle-FFixedHW-opre.patch
 	patches.suse/ACPICA-Utilities-Fix-spelling-mistake-Incremement-In.patch
 	patches.suse/PM-wakeup-Delete-space-in-the-end-of-string-shown-by.patch
