pinctrl: mcp23s08: Reset all pins to input at probe (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32522,6 +32522,7 @@
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.9.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.9-patches.patch
 	patches.suse/scsi-dc395x-Remove-leftover-if-statement-in-reselect.patch
+	patches.suse/pinctrl-mcp23s08-Reset-all-pins-to-input-at-probe.patch
 	patches.suse/pinctrl-at91-Fix-possible-out-of-boundary-access.patch
 	patches.suse/pinctrl-armada-37xx-use-correct-OUTPUT_VAL-register-.patch
 	patches.suse/pinctrl-armada-37xx-set-GPIO-output-value-before-set.patch
