--- a/series.conf
+++ b/series.conf
@@ -32355,6 +32355,7 @@
 	patches.suse/ASoC-meson-meson-card-utils-use-of_property_present-.patch
 	patches.suse/ASoC-SOF-ipc4-pcm-Adjust-pipeline_list-pipelines-all.patch
 	patches.suse/ASoC-tegra210_ahub-Add-check-to-of_device_get_match_.patch
+	patches.suse/ASoC-amd-yc-Add-quirk-for-Lenovo-Yoga-Pro-7-14ASP9.patch
 	patches.suse/ASoC-apple-mca-Constrain-channels-according-to-TDM-m.patch
 	patches.suse/ASoC-qcom-sdm845-Add-error-handling-in-sdm845_slim_s.patch
 	patches.suse/gpiolib-Revert-Don-t-WARN-on-gpiod_put-for-optional-.patch
