ACPICA: fix acpi parse and parseext cache leaks (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32372,6 +32372,7 @@
 	patches.suse/ACPI-OSI-Stop-advertising-support-for-3.0-_SCP-Exten.patch
 	patches.suse/ACPI-bus-Bail-out-if-acpi_kobj-registration-fails.patch
 	patches.suse/ACPICA-fix-acpi-operand-cache-leak-in-dswstate.c.patch
+	patches.suse/ACPICA-fix-acpi-parse-and-parseext-cache-leaks.patch
 	patches.suse/ACPICA-exserial-don-t-forget-to-handle-FFixedHW-opre.patch
 	patches.suse/ACPICA-Utilities-Fix-spelling-mistake-Incremement-In.patch
 	patches.suse/PM-wakeup-Delete-space-in-the-end-of-string-shown-by.patch
