i2c: designware: Invoke runtime suspend on quick slave re-registration (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32532,6 +32532,7 @@
 	patches.suse/pinctrl-armada-37xx-propagate-error-from-armada_37xx-4229c28.patch
 	patches.suse/i2c-npcm-Add-clock-toggle-recovery.patch
 	patches.suse/i2c-tegra-check-msg-length-in-SMBUS-block-read.patch
+	patches.suse/i2c-designware-Invoke-runtime-suspend-on-quick-slave.patch
 	patches.suse/IB-cm-use-rwlock-for-MAD-agent-lock.patch
 	patches.suse/RDMA-rxe-Fix-trying-to-register-non-static-key-in-rx.patch
 	patches.suse/RDMA-hns-Include-hnae3.h-in-hns_roce_hw_v2.h.patch
