ALSA: hda/realtek: Fix built-in mic on ASUS VivoBook X507UAR (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32715,6 +32715,7 @@
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
+	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
 
 	########################################################
 	# end of sorted patches
