watchdog: da9052_wdt: respect TWDMIN (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32559,6 +32559,7 @@
 	patches.suse/watchdog-fix-watchdog-may-detect-false-positive-of-s.patch
 	patches.suse/nilfs2-add-pointer-check-for-nilfs_direct_propagate.patch
 	patches.suse/nilfs2-do-not-propagate-ENOENT-error-from-nilfs_btree_propagate.patch
+	patches.suse/watchdog-da9052_wdt-respect-TWDMIN.patch
 	patches.suse/mtd-nand-ecc-mxic-Fix-use-of-uninitialized-variable-.patch
 	patches.suse/mtd-nand-sunxi-Add-randomizer-configuration-before-r.patch
 	patches.suse/mtd-rawnand-sunxi-Add-randomizer-configuration-in-su.patch
