watchdog: fix watchdog may detect false positive of softlockup (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32556,6 +32556,7 @@
 	patches.suse/fbdev-Fix-fb_set_var-to-prevent-null-ptr-deref-in-fb.patch
 	patches.suse/selftests-mm-restore-default-nr_hugepages-value-duri.patch
 	patches.suse/Squashfs-check-return-result-of-sb_min_blocksize.patch
+	patches.suse/watchdog-fix-watchdog-may-detect-false-positive-of-s.patch
 	patches.suse/nilfs2-add-pointer-check-for-nilfs_direct_propagate.patch
 	patches.suse/nilfs2-do-not-propagate-ENOENT-error-from-nilfs_btree_propagate.patch
 	patches.suse/mtd-nand-ecc-mxic-Fix-use-of-uninitialized-variable-.patch
