wifi: ath12k: fix link valid field initialization in the monitor Rx (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32441,6 +32441,7 @@
 	patches.suse/wifi-mac80211-VLAN-traffic-in-multicast-path.patch
 	patches.suse/wifi-ath12k-Pass-correct-values-of-center-freq1-and-.patch
 	patches.suse/wifi-ath12k-fix-incorrect-CE-addresses.patch
+	patches.suse/wifi-ath12k-fix-link-valid-field-initialization-in-t.patch
 	patches.suse/wifi-ath11k-determine-PM-policy-based-on-machine-mod.patch
 	patches.suse/wifi-ath11k-introduce-ath11k_core_continue_suspend_r.patch
 	patches.suse/wifi-ath11k-refactor-ath11k_core_suspend-_resume.patch
