wifi: mt76: mt76x2: Add support for LiteOn WN4516R,WN4519R (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32480,6 +32480,7 @@
 	patches.suse/wifi-ath12k-fix-ring-buffer-corruption.patch
 	patches.suse/wifi-ath9k_htc-Abort-software-beacon-handling-if-dis.patch
 	patches.suse/Revert-wifi-mt76-mt7996-fill-txd-by-host-driver.patch
+	patches.suse/wifi-mt76-mt76x2-Add-support-for-LiteOn-WN4516R-WN45.patch
 	patches.suse/wifi-mt76-mt7925-fix-host-interrupt-register-initial.patch
 	patches.suse/wifi-mt76-mt7915-Fix-null-ptr-deref-in-mt7915_mmio_w.patch
 	patches.suse/wifi-mt76-mt7925-prevent-multiple-scan-commands.patch
