power: supply: bq27xxx: Retrieve again when busy (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32367,6 +32367,7 @@
 	patches.suse/spi-sh-msiof-Fix-maximum-DMA-transfer-size.patch
 	patches.suse/power-supply-collie-Fix-wakeup-source-leaks-on-devic.patch
 	patches.suse/power-reset-at91-reset-Optimize-at91_reset.patch
+	patches.suse/power-supply-bq27xxx-Retrieve-again-when-busy.patch
 	patches.suse/ACPI-OSI-Stop-advertising-support-for-3.0-_SCP-Exten.patch
 	patches.suse/ACPICA-exserial-don-t-forget-to-handle-FFixedHW-opre.patch
 	patches.suse/ACPICA-Utilities-Fix-spelling-mistake-Incremement-In.patch
