Input: sparcspkr - avoid unannotated fall-through (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32171,6 +32171,7 @@
 	patches.suse/ocfs2-fix-the-issue-with-discontiguous-allocation-in.patch
 	patches.suse/mm-huge_memory-fix-dereferencing-invalid-pmd-migration-ent.patch
 	patches.suse/memblock-Accept-allocated-memory-before-use-in-memblock_do.patch
+	patches.suse/Input-sparcspkr-avoid-unannotated-fall-through.patch
 	patches.suse/Input-cyttsp5-ensure-minimum-reset-pulse-width.patch
 	patches.suse/Input-xpad-add-support-for-8BitDo-Ultimate-2-Wireles.patch
 	patches.suse/Input-mtk-pmic-keys-fix-possible-null-pointer-derefe.patch
