fbcon: Make sure modelist not set on unregistered console (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32550,6 +32550,7 @@
 	patches.suse/bus-fsl-mc-fix-GET-SET_TAILDROP-command-ids.patch
 	patches.suse/bus-fsl-mc-increase-MC_CMD_COMPLETION_TIMEOUT_MS-val.patch
 	patches.suse/vgacon-Add-check-for-vc_origin-address-range-in-vgac.patch
+	patches.suse/fbcon-Make-sure-modelist-not-set-on-unregistered-con.patch
 	patches.suse/fbdev-core-fbcvt-avoid-division-by-0-in-fb_cvt_hperi.patch
 	patches.suse/fbdev-Fix-do_register_framebuffer-to-prevent-null-pt.patch
 	patches.suse/fbdev-Fix-fb_set_var-to-prevent-null-ptr-deref-in-fb.patch
