ACPICA: Avoid sequence overread in call to strncmp() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32376,6 +32376,7 @@
 	patches.suse/ACPICA-exserial-don-t-forget-to-handle-FFixedHW-opre.patch
 	patches.suse/ACPICA-utilities-Fix-overflow-check-in-vsnprintf.patch
 	patches.suse/ACPICA-Utilities-Fix-spelling-mistake-Incremement-In.patch
+	patches.suse/ACPICA-Avoid-sequence-overread-in-call-to-strncmp.patch
 	patches.suse/PM-wakeup-Delete-space-in-the-end-of-string-shown-by.patch
 	patches.suse/PM-sleep-Print-PM-debug-messages-during-hibernation.patch
 	patches.suse/xen-x86-fix-initial-memory-balloon-target.patch
