--- a/series.conf
+++ b/series.conf
@@ -32716,6 +32716,7 @@
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
+	patches.suse/drm-i915-fix-build-error-some-more.patch
 
 	########################################################
 	# end of sorted patches
