wifi: ath12k: fix failed to set mhi state error during reboot with hardware grouping (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32453,6 +32453,7 @@
 	patches.suse/wifi-ath12k-Fix-invalid-memory-access-while-forming-.patch
 	patches.suse/wifi-ath12k-fix-cleanup-path-after-mhi-init.patch
 	patches.suse/wifi-ath12k-Fix-WMI-tag-for-EHT-rate-in-peer-assoc.patch
+	patches.suse/wifi-ath12k-fix-failed-to-set-mhi-state-error-during.patch
 	patches.suse/wifi-ath12k-fix-invalid-access-to-memory.patch
 	patches.suse/wifi-ath12k-Add-MSDU-length-validation-for-TKIP-MIC-.patch
 	patches.suse/wifi-ath12k-Fix-the-QoS-control-field-offset-to-buil.patch
