--- a/series.conf
+++ b/series.conf
@@ -32703,6 +32703,7 @@
 	patches.suse/drm-etnaviv-Protect-the-scheduler-s-pending-list-wit.patch
 	patches.suse/ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-list.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X.patch
+	patches.suse/ALSA-usb-audio-Rename-ALSA-kcontrol-PCM-and-PCM1-for.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
 	patches.suse/scsi-elx-efct-Fix-memory-leak-in-efct_hw_parse_filter.patch
 	patches.suse/PCI-PM-Set-up-runtime-PM-even-for-devices-without-PC.patch
