wifi: mac80211: do not offer a mesh path if forwarding is disabled (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32461,6 +32461,7 @@
 	patches.suse/wifi-mac80211_hwsim-Prevent-tsf-from-setting-if-beac.patch
 	patches.suse/wifi-iwlwifi-pcie-make-sure-to-lock-rxq-read.patch
 	patches.suse/Bluetooth-MGMT-iterate-over-mesh-commands-in-mgmt_me.patch
+	patches.suse/wifi-mac80211-do-not-offer-a-mesh-path-if-forwarding.patch
 	patches.suse/wifi-iwlfiwi-mvm-Fix-the-rate-reporting.patch
 	patches.suse/wifi-rtw88-sdio-map-mgmt-frames-to-queue-TX_DESC_QSE.patch
 	patches.suse/wifi-rtw88-sdio-call-rtw_sdio_indicate_tx_status-unc.patch
