wifi: ath11k: Fix QMI memory reuse logic (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32472,6 +32472,7 @@
 	patches.suse/wifi-rtw88-usb-Reduce-control-message-timeout-to-500.patch
 	patches.suse/wifi-rtw88-fix-the-para-buffer-size-to-avoid-reading.patch
 	patches.suse/wifi-p54-prevent-buffer-overflow-in-p54_rx_eeprom_re.patch
+	patches.suse/wifi-ath11k-Fix-QMI-memory-reuse-logic.patch
 	patches.suse/wifi-ath11k-fix-ring-buffer-corruption.patch
 	patches.suse/wifi-ath11k-fix-rx-completion-meta-data-corruption.patch
 	patches.suse/wifi-ath12k-fix-ring-buffer-corruption.patch
