bus: fsl-mc: increase MC_CMD_COMPLETION_TIMEOUT_MS value (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32548,6 +32548,7 @@
 	patches.suse/bus-fsl-mc-fix-double-free-on-mc_dev.patch
 	patches.suse/bus-fsl-mc-do-not-add-a-device-link-for-the-UAPI-use.patch
 	patches.suse/bus-fsl-mc-fix-GET-SET_TAILDROP-command-ids.patch
+	patches.suse/bus-fsl-mc-increase-MC_CMD_COMPLETION_TIMEOUT_MS-val.patch
 	patches.suse/vgacon-Add-check-for-vc_origin-address-range-in-vgac.patch
 	patches.suse/fbdev-core-fbcvt-avoid-division-by-0-in-fb_cvt_hperi.patch
 	patches.suse/fbdev-Fix-do_register_framebuffer-to-prevent-null-pt.patch
