wireless: purelifi: plfxlc: fix memory leak in plfxlc_usb_wreq_asyn() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53331,6 +53331,7 @@
 	patches.suse/wifi-ath12k-fix-node-corruption-in-ar-arvifs-list.patch
 	patches.suse/Bluetooth-MGMT-iterate-over-mesh-commands-in-mgmt_me.patch
 	patches.suse/Bluetooth-btintel-Check-dsbr-size-from-EFI-variable.patch
+	patches.suse/wireless-purelifi-plfxlc-fix-memory-leak-in-plfxlc_u.patch
 	patches.suse/wifi-iwlfiwi-mvm-Fix-the-rate-reporting.patch
 	patches.suse/wifi-rtw88-sdio-map-mgmt-frames-to-queue-TX_DESC_QSE.patch
 	patches.suse/wifi-rtw88-sdio-call-rtw_sdio_indicate_tx_status-unc.patch
