drm/amdgpu: read back register after written for VCN v4.0.5 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53083,6 +53083,7 @@
 	patches.suse/drm-amd-display-check-stream-id-dml21-wrapper-to-get.patch
 	patches.suse/drm-amd-display-Avoid-flooding-unnecessary-info-mess.patch
 	patches.suse/Revert-drm-amd-display-Hardware-cursor-changes-color.patch
+	patches.suse/drm-amdgpu-read-back-register-after-written-for-VCN-.patch
 	patches.suse/dma-buf-insert-memory-barrier-before-updating-num_fe.patch
 	patches.suse/drm-xe-xe2hpg-Add-Wa_22021007897.patch
 	patches.suse/drm-xe-Save-CTX_TIMESTAMP-mmio-value-instead-of-LRC-.patch
