drm/xe: Process deferred GGTT node removals on device unwind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53610,6 +53610,7 @@
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
 	patches.suse/drm-xe-display-Add-check-for-alloc_ordered_workqueue.patch
+	patches.suse/drm-xe-Process-deferred-GGTT-node-removals-on-device.patch
 
 	########################################################
 	# end of sorted patches
