wifi: rtw89: phy: add dummy C2H event handler for report of TAS power (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50617,6 +50617,7 @@
 	patches.suse/wifi-rtlwifi-destroy-workqueue-at-rtl_deinit_core.patch
 	patches.suse/wifi-rtlwifi-fix-memory-leaks-and-invalid-access-at-.patch
 	patches.suse/wifi-rtlwifi-pci-wait-for-firmware-loading-before-re.patch
+	patches.suse/wifi-rtw89-phy-add-dummy-C2H-event-handler-for-repor.patch
 	patches.suse/udp-Deal-with-race-between-UDP-socket-address-change-and-r.patch
 	patches.suse/ixgbe-Add-support-for-E610-FW-Admin-Command-Interfac.patch
 	patches.suse/ixgbe-Add-support-for-E610-device-capabilities-detec.patch
