ACPI: Add missing prototype for non CONFIG_SUSPEND/CONFIG_X86 case (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53233,6 +53233,7 @@
 	patches.suse/thermal-drivers-mediatek-lvts-Fix-debugfs-unregister.patch
 	patches.suse/ACPICA-exserial-don-t-forget-to-handle-FFixedHW-opre.patch
 	patches.suse/ACPICA-Utilities-Fix-spelling-mistake-Incremement-In.patch
+	patches.suse/ACPI-Add-missing-prototype-for-non-CONFIG_SUSPEND-CO.patch
 	patches.suse/Documentation-ACPI-Use-all-string-data-node-referenc.patch
 	patches.suse/PM-wakeup-Delete-space-in-the-end-of-string-shown-by.patch
 	patches.suse/PM-sleep-Print-PM-debug-messages-during-hibernation.patch
