--- a/series.conf
+++ b/series.conf
@@ -53596,6 +53596,7 @@
 	patches.suse/drm-nouveau-bl-increase-buffer-size-to-avoid-truncat.patch
 	patches.suse/drm-v3d-Avoid-NULL-pointer-dereference-in-v3d_job_up.patch
 	patches.suse/drm-etnaviv-Protect-the-scheduler-s-pending-list-wit.patch
+	patches.suse/drm-xe-bmg-Update-Wa_16023588340.patch
 	patches.suse/drm-xe-Fix-memset-on-iomem.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
