drm/xe/display: Add check for alloc_ordered_workqueue() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53609,6 +53609,7 @@
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
+	patches.suse/drm-xe-display-Add-check-for-alloc_ordered_workqueue.patch
 
 	########################################################
 	# end of sorted patches
