--- a/series.conf
+++ b/series.conf
@@ -53608,6 +53608,7 @@
 	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
+	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
 
 	########################################################
 	# end of sorted patches
