--- a/series.conf
+++ b/series.conf
@@ -53323,6 +53323,7 @@
 	patches.suse/wifi-ath12k-Fix-WMI-tag-for-EHT-rate-in-peer-assoc.patch
 	patches.suse/wifi-ath12k-Fix-buffer-overflow-in-debugfs.patch
 	patches.suse/wifi-ath12k-Handle-error-cases-during-extended-skb-a.patch
+	patches.suse/wifi-ath12k-using-msdu-end-descriptor-to-check-for-r.patch
 	patches.suse/wifi-ath12k-fix-invalid-access-to-memory.patch
 	patches.suse/wifi-ath12k-Add-MSDU-length-validation-for-TKIP-MIC-.patch
 	patches.suse/wifi-ath12k-Fix-the-QoS-control-field-offset-to-buil.patch
