--- a/series.conf
+++ b/series.conf
@@ -53333,6 +53333,7 @@
 	patches.suse/Bluetooth-btintel-Check-dsbr-size-from-EFI-variable.patch
 	patches.suse/wireless-purelifi-plfxlc-fix-memory-leak-in-plfxlc_u.patch
 	patches.suse/wifi-iwlfiwi-mvm-Fix-the-rate-reporting.patch
+	patches.suse/wifi-iwlwifi-mvm-fix-beacon-CCK-flag.patch
 	patches.suse/wifi-rtw88-sdio-map-mgmt-frames-to-queue-TX_DESC_QSE.patch
 	patches.suse/wifi-rtw88-sdio-call-rtw_sdio_indicate_tx_status-unc.patch
 	patches.suse/wifi-rtw88-do-not-ignore-hardware-read-error-during-.patch
