- drm/xe/gt: Update handling of xe_force_wake_get return   (stable-fixes). - Refresh   patches.suse/drm-xe-Fix-GT-for-each-engine-workarounds.patch.

--- a/series.conf
+++ b/series.conf
@@ -49240,6 +49240,7 @@
 	patches.suse/drm-msm-adreno-Use-IRQF_NO_AUTOEN-flag-in-request_ir.patch
 	patches.suse/drm-msm-gpu-Check-the-status-of-registration-to-PM-Q.patch
 	patches.suse/drm-xe-forcewake-Add-a-helper-xe_force_wake_ref_has_.patch
+	patches.suse/drm-xe-gt-Update-handling-of-xe_force_wake_get-retur.patch
 	patches.suse/drm-xe-devcoredump-Update-handling-of-xe_force_wake_.patch
 	patches.suse/drm-xe-tests-mocs-Update-xe_force_wake_get-return-ha.patch
 	patches.suse/drm-xe-guc-ct-Flush-g2h-worker-in-case-of-g2h-respon.patch
