ACPICA: Apply pack(1) to union aml_resource (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8814,6 +8814,7 @@
 	patches.suse/ACPICA-fix-acpi-operand-cache-leak-in-dswstate.c.patch
 	patches.suse/ACPICA-fix-acpi-parse-and-parseext-cache-leaks.patch
 	patches.suse/ACPICA-exserial-don-t-forget-to-handle-FFixedHW-opre.patch
+	patches.suse/ACPICA-Apply-pack-1-to-union-aml_resource.patch
 	patches.suse/ACPICA-Utilities-Fix-spelling-mistake-Incremement-In.patch
 	patches.suse/ACPI-resource-fix-a-typo-for-MECHREVO-in-irq1_edge_l.patch
 	patches.suse/Documentation-ACPI-Use-all-string-data-node-referenc.patch
