ACPICA: Avoid sequence overread in call to strncmp() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8817,6 +8817,7 @@
 	patches.suse/ACPICA-Apply-pack-1-to-union-aml_resource.patch
 	patches.suse/ACPICA-utilities-Fix-overflow-check-in-vsnprintf.patch
 	patches.suse/ACPICA-Utilities-Fix-spelling-mistake-Incremement-In.patch
+	patches.suse/ACPICA-Avoid-sequence-overread-in-call-to-strncmp.patch
 	patches.suse/ACPI-resource-fix-a-typo-for-MECHREVO-in-irq1_edge_l.patch
 	patches.suse/Documentation-ACPI-Use-all-string-data-node-referenc.patch
 	patches.suse/PM-EM-Fix-potential-division-by-zero-error-in-em_com.patch
