--- a/series.conf
+++ b/series.conf
@@ -8786,6 +8786,7 @@
 	patches.suse/PCI-Add-Intel-Wildcat-Lake-audio-Device-ID.patch
 	patches.suse/ALSA-hda-add-HDMI-codec-ID-for-Intel-WCL.patch
 	patches.suse/ALSA-hda-hda-intel-add-Wildcat-Lake-support.patch
+	patches.suse/ASoC-tas2770-Power-cycle-amp-on-ISENSE-VSENSE-change.patch
 	patches.suse/ASoC-tas2764-Reinit-cache-on-part-reset.patch
 	patches.suse/ASoC-tas2764-Enable-main-IRQs.patch
 	patches.suse/ASoC-mediatek-mt8195-Set-ETDM1-2-IN-OUT-to-COMP_DUMM.patch
