Bluetooth: btusb: Add new VID/PID 13d3/3584 for MT7922 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8974,6 +8974,7 @@
 	patches.suse/net-ibmveth-Refactored-veth_pool_store-for-better-ma.patch
 	patches.suse/Bluetooth-ISO-Fix-not-using-SID-from-adv-report.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3630-for-MT7925.patch
+	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3584-for-MT7922.patch
 	patches.suse/Bluetooth-MGMT-iterate-over-mesh-commands-in-mgmt_me.patch
 	patches.suse/Bluetooth-btintel-Check-dsbr-size-from-EFI-variable.patch
 	patches.suse/wifi-iwlfiwi-mvm-Fix-the-rate-reporting.patch
