--- a/series.conf
+++ b/series.conf
@@ -8811,6 +8811,7 @@
 	patches.suse/thermal-drivers-mediatek-lvts-Fix-debugfs-unregister.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Remove-unused-lvts_deb.patch
 	patches.suse/ACPI-bus-Bail-out-if-acpi_kobj-registration-fails.patch
+	patches.suse/ACPICA-fix-acpi-operand-cache-leak-in-dswstate.c.patch
 	patches.suse/ACPICA-exserial-don-t-forget-to-handle-FFixedHW-opre.patch
 	patches.suse/ACPICA-Utilities-Fix-spelling-mistake-Incremement-In.patch
 	patches.suse/ACPI-resource-fix-a-typo-for-MECHREVO-in-irq1_edge_l.patch
