--- a/series.conf
+++ b/series.conf
@@ -8820,6 +8820,7 @@
 	patches.suse/ACPICA-Avoid-sequence-overread-in-call-to-strncmp.patch
 	patches.suse/ACPI-battery-negate-current-when-discharging.patch
 	patches.suse/ACPI-resource-fix-a-typo-for-MECHREVO-in-irq1_edge_l.patch
+	patches.suse/ACPI-Add-missing-prototype-for-non-CONFIG_SUSPEND-CO.patch
 	patches.suse/Documentation-ACPI-Use-all-string-data-node-referenc.patch
 	patches.suse/PM-EM-Fix-potential-division-by-zero-error-in-em_com.patch
 	patches.suse/cpufreq-amd-pstate-Move-max_perf-limiting-in-amd_pstate_update.patch
