--- a/series.conf
+++ b/series.conf
@@ -9443,6 +9443,7 @@
 	patches.suse/ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-list.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-support-for-HP-Victus-.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-Asus-GU605C.patch
 	patches.suse/gpio-pca953x-fix-wrong-error-probe-return-value.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
 	patches.suse/scsi-elx-efct-Fix-memory-leak-in-efct_hw_parse_filter.patch
