--- a/series.conf
+++ b/series.conf
@@ -9440,6 +9440,7 @@
 	patches.suse/drm-nouveau-bl-increase-buffer-size-to-avoid-truncat.patch
 	patches.suse/drm-etnaviv-Protect-the-scheduler-s-pending-list-wit.patch
 	patches.suse/drm-xe-Fix-memset-on-iomem.patch
+	patches.suse/ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-list.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X.patch
 	patches.suse/gpio-pca953x-fix-wrong-error-probe-return-value.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
