--- a/series.conf
+++ b/series.conf
@@ -8818,6 +8818,7 @@
 	patches.suse/ACPICA-utilities-Fix-overflow-check-in-vsnprintf.patch
 	patches.suse/ACPICA-Utilities-Fix-spelling-mistake-Incremement-In.patch
 	patches.suse/ACPICA-Avoid-sequence-overread-in-call-to-strncmp.patch
+	patches.suse/ACPI-battery-negate-current-when-discharging.patch
 	patches.suse/ACPI-resource-fix-a-typo-for-MECHREVO-in-irq1_edge_l.patch
 	patches.suse/Documentation-ACPI-Use-all-string-data-node-referenc.patch
 	patches.suse/PM-EM-Fix-potential-division-by-zero-error-in-em_com.patch
