ALSA: usb-audio: Fix out-of-bounds read in snd_usb_get_audioformat_uac3() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9458,6 +9458,7 @@
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 	patches.suse/HID-wacom-fix-crash-in-wacom_aes_battery_handler.patch
+	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
