--- a/series.conf
+++ b/series.conf
@@ -9419,6 +9419,7 @@
 	patches.suse/platform-x86-amd-pmf-Prevent-amd_pmf_tee_deinit-from.patch
 	patches.suse/platform-x86-dell_rbu-Fix-list-usage.patch
 	patches.suse/platform-x86-dell_rbu-Stop-overwriting-data-buffer.patch
+	patches.suse/ata-pata_via-Force-PIO-for-ATAPI-devices-on-VT6415-V.patch
 	patches.suse/workqueue-Initialize-wq_isolated_cpumask-in-workqueue_init.patch
 	patches.suse/hwmon-ftsteutates-Fix-TOCTOU-race-in-fts_read.patch
 	patches.suse/hwmon-occ-Rework-attribute-registration-for-stack-us.patch
