--- a/series.conf
+++ b/series.conf
@@ -8794,6 +8794,7 @@
 	patches.suse/ASoC-SOF-ipc4-pcm-Adjust-pipeline_list-pipelines-all.patch
 	patches.suse/ASoC-SOF-amd-add-missing-acp-descriptor-field.patch
 	patches.suse/ASoC-amd-sof_amd_sdw-Fix-unlikely-uninitialized-vari.patch
+	patches.suse/ASoC-tegra210_ahub-Add-check-to-of_device_get_match_.patch
 	patches.suse/ASoC-apple-mca-Constrain-channels-according-to-TDM-m.patch
 	patches.suse/ASoC-qcom-sdm845-Add-error-handling-in-sdm845_slim_s.patch
 	patches.suse/gpiolib-Revert-Don-t-WARN-on-gpiod_put-for-optional-.patch
