drm/amd: Adjust output for discovery error handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9466,6 +9466,7 @@
 	patches.suse/HID-wacom-fix-crash-in-wacom_aes_battery_handler.patch
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
+	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
