drm/xe: Process deferred GGTT node removals on device unwind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9469,6 +9469,7 @@
 	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
 	patches.suse/drm-i915-fix-build-error-some-more.patch
 	patches.suse/drm-xe-display-Add-check-for-alloc_ordered_workqueue.patch
+	patches.suse/drm-xe-Process-deferred-GGTT-node-removals-on-device.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
