drm/xe/bmg: Update Wa_16023588340 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9444,6 +9444,7 @@
 	patches.suse/drm-nouveau-bl-increase-buffer-size-to-avoid-truncat.patch
 	patches.suse/drm-v3d-Avoid-NULL-pointer-dereference-in-v3d_job_up.patch
 	patches.suse/drm-etnaviv-Protect-the-scheduler-s-pending-list-wit.patch
+	patches.suse/drm-xe-bmg-Update-Wa_16023588340.patch
 	patches.suse/drm-xe-Fix-memset-on-iomem.patch
 	patches.suse/ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-list.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-support-for-HP-Victus-.patch
