drm/xe/display: Add check for alloc_ordered_workqueue() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9468,6 +9468,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
 	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
 	patches.suse/drm-i915-fix-build-error-some-more.patch
+	patches.suse/drm-xe-display-Add-check-for-alloc_ordered_workqueue.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
