--- a/series.conf
+++ b/series.conf
@@ -9467,6 +9467,7 @@
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
 	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
+	patches.suse/drm-i915-fix-build-error-some-more.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
