--- a/series.conf
+++ b/series.conf
@@ -9478,6 +9478,7 @@
 	patches.suse/drm-xe-display-Add-check-for-alloc_ordered_workqueue.patch
 	patches.suse/drm-xe-Process-deferred-GGTT-node-removals-on-device.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
+	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
