mmc: Add quirk to disable DDR50 tuning (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8813,6 +8813,7 @@
 	patches.suse/spi-tegra210-quad-modify-chip-select-CS-deactivation.patch
 	patches.suse/spi-sh-msiof-Fix-maximum-DMA-transfer-size.patch
 	patches.suse/power-reset-at91-reset-Optimize-at91_reset.patch
+	patches.suse/mmc-Add-quirk-to-disable-DDR50-tuning.patch
 	patches.suse/ACPI-OSI-Stop-advertising-support-for-3.0-_SCP-Exten.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Fix-debugfs-unregister.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Remove-unused-lvts_deb.patch
