--- a/series.conf
+++ b/series.conf
@@ -9175,6 +9175,7 @@
 	patches.suse/pinctrl-samsung-add-gs101-specific-eint-suspend-resu.patch
 	patches.suse/pinctrl-armada-37xx-use-correct-OUTPUT_VAL-register-.patch
 	patches.suse/pinctrl-armada-37xx-set-GPIO-output-value-before-set.patch
+	patches.suse/i2c-npcm-Add-clock-toggle-recovery.patch
 	patches.suse/i2c-tegra-check-msg-length-in-SMBUS-block-read.patch
 	patches.suse/IB-cm-use-rwlock-for-MAD-agent-lock.patch
 	patches.suse/msft-hv-3248-RDMA-mana_ib-Access-remote-atomic-for-MRs.patch
