--- a/series.conf
+++ b/series.conf
@@ -8816,6 +8816,7 @@
 	patches.suse/spi-sh-msiof-Fix-maximum-DMA-transfer-size.patch
 	patches.suse/power-supply-collie-Fix-wakeup-source-leaks-on-devic.patch
 	patches.suse/power-reset-at91-reset-Optimize-at91_reset.patch
+	patches.suse/power-supply-bq27xxx-Retrieve-again-when-busy.patch
 	patches.suse/mmc-Add-quirk-to-disable-DDR50-tuning.patch
 	patches.suse/ACPI-OSI-Stop-advertising-support-for-3.0-_SCP-Exten.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Fix-debugfs-unregister.patch
