drivers/rapidio/rio_cm.c: prevent possible heap overwrite (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9436,6 +9436,7 @@
 	patches.suse/drm-meson-fix-more-rounding-issues-with-59.94Hz-mode.patch
 	patches.suse/udmabuf-use-sgtable-based-scatterlist-wrappers.patch
 	patches.suse/scsi-iscsi-Fix-incorrect-error-path-labels-for-flashnode-o.patch
+	patches.suse/drivers-rapidio-rio_cm.c-prevent-possible-heap-overw.patch
 	patches.suse/nvme-always-punt-polled-uring_cmd-end_io-work-to-tas.patch
 	patches.suse/powerpc-eeh-Fix-missing-PE-bridge-reconfiguration-du.patch
 	patches.suse/x86-virt-tdx-Avoid-indirect-calls-to-TDX-assembly-function.patch
