PM: runtime: fix denying of auto suspend in pm_suspend_timer_fn() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8838,6 +8838,7 @@
 	patches.suse/cpufreq-amd-pstate-Move-max_perf-limiting-in-amd_pstate_update.patch
 	patches.suse/cpufreq-amd-pstate-Add-offline-online-and-suspend-callbacks-for-amd_pstate_driver.patch
 	patches.suse/cpufreq-amd-pstate-Add-support-for-the-Requested-CPU-Min-frequency-BIOS-option.patch
+	patches.suse/PM-runtime-fix-denying-of-auto-suspend-in-pm_suspend.patch
 	patches.suse/PM-wakeup-Delete-space-in-the-end-of-string-shown-by.patch
 	patches.suse/PM-sleep-Print-PM-debug-messages-during-hibernation.patch
 	patches.suse/xen-x86-fix-initial-memory-balloon-target.patch
