watchdog: da9052_wdt: respect TWDMIN (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9231,6 +9231,7 @@
 	patches.suse/Squashfs-check-return-result-of-sb_min_blocksize.patch
 	patches.suse/watchdog-fix-watchdog-may-detect-false-positive-of-s.patch
 	patches.suse/EDAC-altera-Use-correct-write-width-with-the-INTTEST.patch
+	patches.suse/watchdog-da9052_wdt-respect-TWDMIN.patch
 	patches.suse/mailbox-imx-Fix-TXDB_V2-sending.patch
 	patches.suse/mailbox-mtk-cmdq-Refine-GCE_GCTL_VALUE-setting.patch
 	patches.suse/mtd-nand-ecc-mxic-Fix-use-of-uninitialized-variable-.patch
