software node: Correct a OOB check in software_node_get_reference_args() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9152,6 +9152,7 @@
 	patches.suse/KVM-arm64-Force-HCR_EL2.xMO-to-1-at-all-times-in-VHE-mode.patch
 	patches.suse/arm64-errata-Work-around-AmpereOne-s-erratum-AC04_CPU_23.patch
 	patches.suse/docs-dt-Update-overlay-file-extension.patch
+	patches.suse/software-node-Correct-a-OOB-check-in-software_node_g.patch
 	patches.suse/hid-asus-check-ROG-Ally-MCU-version-and-warn.patch
 	patches.suse/platform-x86-amd-hsmp-Use-a-single-DRIVER_VERSION-for-all-.patch
 	patches.suse/platform-x86-amd-hsmp-Report-power-via-hwmon-sensors.patch
