pinctrl: armada-37xx: propagate error from armada_37xx_gpio_get() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9187,6 +9187,7 @@
 	patches.suse/pinctrl-samsung-add-gs101-specific-eint-suspend-resu.patch
 	patches.suse/pinctrl-armada-37xx-use-correct-OUTPUT_VAL-register-.patch
 	patches.suse/pinctrl-armada-37xx-set-GPIO-output-value-before-set.patch
+	patches.suse/pinctrl-armada-37xx-propagate-error-from-armada_37xx.patch
 	patches.suse/i2c-npcm-Add-clock-toggle-recovery.patch
 	patches.suse/i2c-tegra-check-msg-length-in-SMBUS-block-read.patch
 	patches.suse/i2c-designware-Invoke-runtime-suspend-on-quick-slave.patch
