watchdog: fix watchdog may detect false positive of softlockup (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9229,6 +9229,7 @@
 	patches.suse/fbdev-Fix-fb_set_var-to-prevent-null-ptr-deref-in-fb.patch
 	patches.suse/selftests-mm-restore-default-nr_hugepages-value-duri.patch
 	patches.suse/Squashfs-check-return-result-of-sb_min_blocksize.patch
+	patches.suse/watchdog-fix-watchdog-may-detect-false-positive-of-s.patch
 	patches.suse/EDAC-altera-Use-correct-write-width-with-the-INTTEST.patch
 	patches.suse/mailbox-imx-Fix-TXDB_V2-sending.patch
 	patches.suse/mailbox-mtk-cmdq-Refine-GCE_GCTL_VALUE-setting.patch
