power: supply: max17040: adjust thermal channel scaling (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8817,6 +8817,7 @@
 	patches.suse/power-supply-collie-Fix-wakeup-source-leaks-on-devic.patch
 	patches.suse/power-reset-at91-reset-Optimize-at91_reset.patch
 	patches.suse/power-supply-bq27xxx-Retrieve-again-when-busy.patch
+	patches.suse/power-supply-max17040-adjust-thermal-channel-scaling.patch
 	patches.suse/mmc-Add-quirk-to-disable-DDR50-tuning.patch
 	patches.suse/ACPI-OSI-Stop-advertising-support-for-3.0-_SCP-Exten.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Fix-debugfs-unregister.patch
