wifi: mac80211: VLAN traffic in multicast path (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8966,6 +8966,7 @@
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
 	patches.suse/wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-Qu-c0-j.patch
+	patches.suse/wifi-mac80211-VLAN-traffic-in-multicast-path.patch
 	patches.suse/wifi-ath12k-refactor-ath12k_hw_regs-structure.patch
 	patches.suse/wifi-ath11k-determine-PM-policy-based-on-machine-mod.patch
 	patches.suse/wifi-ath11k-introduce-ath11k_core_continue_suspend_r.patch
