--- a/series.conf
+++ b/series.conf
@@ -8961,6 +8961,7 @@
 	patches.suse/arm64-fpsimd-ptrace-Do-not-present-register-data-for-inact.patch
 	patches.suse/arm64-fpsimd-ptrace-Mandate-SVE-payload-for-streaming-mode.patch
 	patches.suse/arm64-fpsimd-ptrace-Gracefully-handle-errors.patch
+	patches.suse/usbnet-asix-AX88772-leave-the-carrier-control-to-phy.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
