wifi: rtw89: phy: add dummy C2H event handler for report of TAS power (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -4179,6 +4179,7 @@
 	patches.suse/wifi-rtlwifi-destroy-workqueue-at-rtl_deinit_core.patch
 	patches.suse/wifi-rtlwifi-fix-memory-leaks-and-invalid-access-at-.patch
 	patches.suse/wifi-rtlwifi-pci-wait-for-firmware-loading-before-re.patch
+	patches.suse/wifi-rtw89-phy-add-dummy-C2H-event-handler-for-repor.patch
 	patches.suse/sfc-remove-efx_writed_page_locked.patch
 	patches.suse/page_pool-add-page_pool_dev_alloc_netmem.patch
 	patches.suse/xdp-add-generic-xdp_buff_add_frag.patch
