--- a/series.conf
+++ b/series.conf
@@ -9180,6 +9180,7 @@
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.9-patches.patch
 	patches.suse/scsi-smartpqi-Fix-smp_processor_id-call-trace-for-preempti.patch
 	patches.suse/scsi-dc395x-Remove-leftover-if-statement-in-reselect.patch
+	patches.suse/pinctrl-mcp23s08-Reset-all-pins-to-input-at-probe.patch
 	patches.suse/pinctrl-at91-Fix-possible-out-of-boundary-access.patch
 	patches.suse/pinctrl-samsung-refactor-drvdata-suspend-resume-call.patch
 	patches.suse/pinctrl-samsung-add-dedicated-SoC-eint-suspend-resum.patch
