platform-msi: Add msi_remove_device_irq_domain() in platform_device_msi_free_irqs_all() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8774,6 +8774,7 @@
 	patches.suse/x86-idle-Remove-MFENCEs-for-X86_BUG_CLFLUSH_MONITOR-in-mwa.patch
 	patches.suse/x86-bugs-Restructure-ITS-mitigation.patch
 	patches.suse/x86-bugs-Fix-spectre_v2-mitigation-default-on-Intel.patch
+	patches.suse/platform-msi-Add-msi_remove_device_irq_domain-in-pla.patch
 	patches.suse/EDAC-skx_common-Fix-general-protection-fault.patch
 	patches.suse/x86-sev-Add-SVSM-vTPM-probe-send_command-functions
 	patches.suse/svsm-Add-header-with-SVSM_VTPM_CMD-helpers
