wifi: ath11k: Fix QMI memory reuse logic (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9017,6 +9017,7 @@
 	patches.suse/wifi-rtw89-fix-firmware-scan-delay-unit-for-WiFi-6-c.patch
 	patches.suse/wifi-p54-prevent-buffer-overflow-in-p54_rx_eeprom_re.patch
 	patches.suse/wifi-mac80211-validate-SCAN_FLAG_AP-in-scan-request-.patch
+	patches.suse/wifi-ath11k-Fix-QMI-memory-reuse-logic.patch
 	patches.suse/wifi-ath11k-fix-ring-buffer-corruption.patch
 	patches.suse/wifi-ath11k-fix-rx-completion-meta-data-corruption.patch
 	patches.suse/wifi-ath12k-fix-ring-buffer-corruption.patch
