wifi: mac80211: validate SCAN_FLAG_AP in scan request during MLO (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9016,6 +9016,7 @@
 	patches.suse/wifi-rtw88-fix-the-para-buffer-size-to-avoid-reading.patch
 	patches.suse/wifi-rtw89-fix-firmware-scan-delay-unit-for-WiFi-6-c.patch
 	patches.suse/wifi-p54-prevent-buffer-overflow-in-p54_rx_eeprom_re.patch
+	patches.suse/wifi-mac80211-validate-SCAN_FLAG_AP-in-scan-request-.patch
 	patches.suse/wifi-ath11k-fix-ring-buffer-corruption.patch
 	patches.suse/wifi-ath11k-fix-rx-completion-meta-data-corruption.patch
 	patches.suse/wifi-ath12k-fix-ring-buffer-corruption.patch
