--- a/series.conf
+++ b/series.conf
@@ -9003,6 +9003,7 @@
 	patches.suse/wifi-mac80211-do-not-offer-a-mesh-path-if-forwarding.patch
 	patches.suse/wireless-purelifi-plfxlc-fix-memory-leak-in-plfxlc_u.patch
 	patches.suse/wifi-iwlfiwi-mvm-Fix-the-rate-reporting.patch
+	patches.suse/wifi-iwlwifi-mvm-fix-beacon-CCK-flag.patch
 	patches.suse/wifi-rtw88-sdio-map-mgmt-frames-to-queue-TX_DESC_QSE.patch
 	patches.suse/wifi-rtw88-sdio-call-rtw_sdio_indicate_tx_status-unc.patch
 	patches.suse/wifi-rtw88-do-not-ignore-hardware-read-error-during-.patch
