wifi: mt76: mt7921: add 160 MHz AP for mt7922 device (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9028,6 +9028,7 @@
 	patches.suse/wifi-mt76-mt76x2-Add-support-for-LiteOn-WN4516R-WN45.patch
 	patches.suse/wifi-mt76-mt7925-introduce-thermal-protection.patch
 	patches.suse/wifi-mt76-mt7925-fix-host-interrupt-register-initial.patch
+	patches.suse/wifi-mt76-mt7921-add-160-MHz-AP-for-mt7922-device.patch
 	patches.suse/wifi-mt76-mt7996-Fix-null-ptr-deref-in-mt7996_mmio_w.patch
 	patches.suse/wifi-mt76-mt7915-Fix-null-ptr-deref-in-mt7915_mmio_w.patch
 	patches.suse/wifi-mt76-mt7925-prevent-multiple-scan-commands.patch
