wifi: rtw89: 8922a: fix TX fail with wrong VCO setting (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9007,6 +9007,7 @@
 	patches.suse/wifi-rtw88-sdio-map-mgmt-frames-to-queue-TX_DESC_QSE.patch
 	patches.suse/wifi-rtw88-sdio-call-rtw_sdio_indicate_tx_status-unc.patch
 	patches.suse/wifi-rtw88-do-not-ignore-hardware-read-error-during-.patch
+	patches.suse/wifi-rtw89-8922a-fix-TX-fail-with-wrong-VCO-setting.patch
 	patches.suse/wifi-rtlwifi-disable-ASPM-for-RTL8723BE-with-subsyst.patch
 	patches.suse/wifi-rtw89-pci-enlarge-retry-times-of-RX-tag-to-1000.patch
 	patches.suse/wifi-rtw88-usb-Reduce-control-message-timeout-to-500.patch
